src/mesa/drivers/dri/i915/intel_clear.c
@@ -179,10 +179,10 @@ intelClear(struct gl_context *ctx, GLbitfield mask)
 
    if (tri_mask) {
       debug_mask("tri", tri_mask);
-      if (ctx->Extensions.ARB_fragment_shader)
-	 _mesa_meta_glsl_Clear(&intel->ctx, tri_mask);
-      else
+      if (ctx->API == API_OPENGLES)
 	 _mesa_meta_Clear(&intel->ctx, tri_mask);
+      else
+	 _mesa_meta_glsl_Clear(&intel->ctx, tri_mask);
    }
 }
 
